fixing layout issues + semantics

--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -499,6 +499,9 @@ body {
 
 }
 
+.grecaptcha-badge {
+  z-index: 999;
+}
 
 @media print {
   .grecaptcha-badge {
